<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.gmsoftwares.fenixgymtools.PrincipalActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lblTopo"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:srcCompat="@mipmap/ic_launcher"
            android:id="@+id/imageView"
            android:contentDescription=""
            tools:ignore="ContentDescription" />

        <TextView
            android:text="@string/strVersao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_marginLeft="430dp"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scvCentro">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lblCentro">

            <Button
                android:text="@string/strBtnBiceps"
                android:layout_width="match_parent"
                android:id="@+id/btnBiceps"
                android:layout_height="80dp"
                android:textSize="30sp"
                android:onClick="abrirBiceps" />

            <Button
                android:text="@string/strBtnCostas"
                android:layout_width="match_parent"
                android:id="@+id/btnCostas"
                android:layout_marginTop="30dp"
                android:layout_height="80dp"
                android:textSize="30sp"
                android:onClick="abrirCostas" />

            <Button
                android:text="@string/strBtnOmbro"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:id="@+id/BtnOmbro"
                android:layout_marginTop="30dp"
                android:textSize="30sp"
                android:onClick="abrirOmbro" />

            <Button
                android:text="@string/strBtnPeito"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:id="@+id/BtnPeito"
                android:layout_marginTop="30dp"
                android:textSize="30sp"
                android:onClick="abrirPeito" />

            <Button
                android:text="@string/strBtnPernas"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:id="@+id/BtnPernas"
                android:layout_marginTop="30dp"
                android:textSize="30sp"
                android:onClick="abrirPernas" />

            <Button
                android:text="@string/strBtnTriceps"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:id="@+id/btnTriceps"
                android:layout_marginTop="30dp"
                android:textSize="30sp"
                android:onClick="abrirTriceps" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
